flutter library it is !

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: material_3_demo
+name: flutter_library
 description:
   A Flutter project showcasing supported Material 3 components, typography, color system and elevation.
   Supports different light/dark mode, color seed, and comparison to Material 2.
@@ -8,7 +8,7 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.5 <4.0.0"
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   flutter:
@@ -20,8 +20,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   integration_test:
     sdk: flutter
+
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
