--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.material_3_demo">
-    <application
-        android:label="material_3_demo"
+    package="com.example.flutter_library">
+   <application
+        android:label="flutter_library"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
